src/objects/MUSW__Master_Work_Item_List__c.object
<CustomObject>
    <description>Master control table to determine which Permit, License, etc values will set or create Work Item outcomes via DRE rules. Can be used to allow non-admin users with appropriate permissions to edit their own criteria and outcome values.</description>
    <fields>
        <fullName>MUSW__Category__c</fullName>
        <description>Type of Work Item</description>
        <label>Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Default_Quantity__c</fullName>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <description>User friendly name of Work Item</description>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__IsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit_Type__c</fullName>
        <description>Permit Record Type</description>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Price_Formula__c</fullName>
        <label>Price Formula</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>a product related to the master work item to carry product information include standard price</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Master Work Item Lists</relationshipLabel>
        <relationshipName>Master_Work_Item_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Record_Type__c</fullName>
        <description>Name of Work Item Record Type</description>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Sub_Category__c</fullName>
        <description>Work Item field grouping</description>
        <label>Sub Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$</fullName>
                </value>
                <value>
                    <fullName>100 LI</fullName>
                </value>
                <value>
                    <fullName>1K BTU</fullName>
                </value>
                <value>
                    <fullName>1K CFM</fullName>
                </value>
                <value>
                    <fullName>AMP</fullName>
                </value>
                <value>
                    <fullName>CU YD</fullName>
                </value>
                <value>
                    <fullName>DEVICE</fullName>
                </value>
                <value>
                    <fullName>EACH</fullName>
                </value>
                <value>
                    <fullName>FLAT</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>GAL</fullName>
                </value>
                <value>
                    <fullName>HEADS</fullName>
                </value>
                <value>
                    <fullName>HOUR</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>INCH</fullName>
                </value>
                <value>
                    <fullName>LIN FT</fullName>
                </value>
                <value>
                    <fullName>QTY</fullName>
                </value>
                <value>
                    <fullName>SQ FT</fullName>
                </value>
                <value>
                    <fullName>SQ YD</fullName>
                </value>
                <value>
                    <fullName>SYSTEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Per_Unit__c</fullName>
        <label>Value Per Unit</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Item_Formula__c</fullName>
        <label>Work Item Formula</label>
        <type>TextArea</type>
    </fields>
    <label>Master Work Item List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Master Work Item List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Work Item Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>